# wolliz

./: .gitignore  CLAUDE.md  LICENSE
back-end/: Dockerfile  pyproject.toml
back-end/apps/properties/: admin.py  models.py  serializers.py  urls.py  views.py
back-end/apps/properties/management/commands/: seed_properties.py
back-end/apps/properties/migrations/: 0001_initial.py
back-end/apps/users/: admin.py  api.py  models.py  schemas.py  serializers.py  urls.py  views.py
back-end/apps/users/migrations/: 0001_initial.py  0002_alter_user_groups_alter_user_is_superuser_and_more.py
back-end/config/: settings.py  urls.py
front-end/: Dockerfile  app.vue  nuxt.config.ts  package.json
front-end/components/: AppFooter.vue  AppLogo.vue  AppPhoneInput.vue  AppUserMenu.vue  PropertyCard.vue  PropertyList.vue  PropertyMap.vue  SearchBar.vue
front-end/composables/: useAuth.ts  usePhoneInput.ts  usePropertySearch.ts
front-end/middleware/: auth.ts  guest.ts
front-end/pages/: index.vue  privacy.vue  search.vue  terms.vue
front-end/pages/auth/: forgot-password.vue  login.vue  register.vue
front-end/pages/profile/: change-password.vue  index.vue
front-end/pages/properties/: [id].vue
front-end/plugins/: auth.ts  mapbox.client.ts
front-end/server/api/auth/: avatar.post.ts  change-password.post.ts  forgot-password.post.ts  login.post.ts  logout.post.ts  me.get.ts  profile.patch.ts  refresh.post.ts  register.post.ts
front-end/server/utils/: fixAvatarUrl.ts
front-end/stores/: auth.ts
infra/docker/: .env.example  docker-compose.yml  fresh.sh
